sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: ')' expected but ';' found.
    setValeur(i-j+1,v);j=0
                      ^