sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n = getNombreValeurs()
  var v = getValeur(0)
  var j = 0
  for (i <- 1 to n-1) {
    v = getValeur (i)
    while ( i>j-1 && plusPetit(i,i-j) {
      if (plusPetit(i,i-j)) {
        copie(i-j,i-j+1)
        j += 1
      }
    }
    setValeur(i-j+1,v);j=0
  }
}